# flowers-on-the-sphere

./: .gitignore  .gitmodules  README.md  pyproject.toml
datagen/: __init__.py  _ylm.py  pyproject.toml  resample.py
datagen/cahn_hilliard/: forcing.py  ic.py  solver.py
datagen/cahn_hilliard/scripts/: generate_sweep.py  postprocess.py  run.py
datagen/cahn_hilliard/slurm/: single.sbatch  smoke.sbatch  sweep.sbatch
datagen/clima_atmos/: __init__.py
datagen/clima_atmos/held_suarez/: README.md  __init__.py  diagnostics.py  postprocess.py  run_hs.jl
datagen/cpl_aim_ocn/: .gitignore  PROVENANCE.md  channels.py  ic.py  namelist.py  regrid.py  solver.py  staging.py  zarr_writer.py
datagen/cpl_aim_ocn/code_ocn/: DIAGNOSTICS_SIZE.h
datagen/cpl_aim_ocn/scripts/: build.py  finalize_dataset.py  generate_sweep.py  run.py  smoke_test.py
datagen/cpl_aim_ocn/slurm/: build.sbatch  finalize.sbatch  short.sbatch  smoke.sbatch  sweep.sbatch
datagen/cpl_aim_ocn/tests/: test_build.py  test_channels.py  test_finalize_dataset.py  (+9 more)
datagen/galewsky/: _units.py  ic.py  so3.py  solver.py
datagen/mickelin/: coeffs.py  solver.py
datagen/mitgcm/: __init__.py  _constants.py  _held_suarez.py  ic.py  mds.py  namelist.py  solver.py
datagen/scripts/: backfill_splits_json.py  compute_stats.py  compute_stats_3d.py  consolidate.py  reorganize_splits.py
datagen/shock_caps/: geometry.py  ic.py  remap.py  solver.py
datagen/shock_quadrants/: geometry.py  ic.py  solver.py
datagen/tests/: test_conservative_remap.py  test_forcing.py  test_shock_caps_ic.py  test_so3.py  test_ylm.py
(+273 files in other folders)
