[project]
name = "flowers-on-the-sphere"
version = "0.1.0"
description = "Zinnia/Dahlia neural solvers for spherical PDEs, with companion Dedalus datagen under datagen/."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "torch>=2.6.0",
    "torch-harmonics>=0.9.0",
    "einops>=0.8.2",
    "numpy>=1.22.4",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "matplotlib",
    "pandas",
    "tqdm>=4.67.1",
    "pyyaml",
    "scipy>=1.16.1",
    "torchinfo>=1.8.0",
    "the-well>=1.1.0",
    "h5py",
    "xarray",
    "zarr",
    "wandb>=0.18",
    "natten>=0.21.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fots"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
