[project]
name = "flowers-on-the-sphere-datagen"
version = "0.1.0"
description = "Dedalus-based data generators (Galewsky shallow-water + Mickelin GNS) for flowers-on-the-sphere."
readme = "../README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "dedalus>=3.0",
    "numpy",
    "scipy",
    "h5py",
    "mpi4py",
    "xarray",
    "zarr",
    "netcdf4",
    "matplotlib",
    "tqdm",
    "jupyterlab>=4.5.6",
    "ipykernel>=7.2.0",
    "imageio[ffmpeg]>=2.37.3",
    "cartopy>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
